fixed from to form

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block mainbody %}
 
-<from  action="/users/login/" method="post">
+<form  action="/users/login/" method="post">
     {% csrf_token %}
             <label>UserName</label>
             <input type="text" name="name"/>
                 <label>Password</label> 
                 <input type="password" name="password" />
             <input type="submit" value="Submit" />
-</from>
+</form>
 <p>{{ rlt }}</p>
 
 {% endblock %}
